--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,6 @@ jobs:
 
       # Run tests
       - name: Run tests
-        run: npm test -- --reporters=default --reporters=jest-junit
+        run: npm run test
         env:
           CI: true
