--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest --watch=false",
     "deploy": "vite build && gh-pages -d dist",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "js-yaml": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -31,8 +33,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.0.0",
     "jest": "^29.7.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vite": "^6.3.4",
+    "vitest": "^3.1.2"
   },
   "jest": {
     "transform": {
