--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.0.0",
     "jest": "^29.7.0",
+    "jsdom": "^26.1.0",
     "vite": "^6.3.4",
     "vitest": "^3.1.2"
   },
