--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
     "vite": "^6.3.4",
@@ -42,5 +42,6 @@
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
     }
-  }
+  },
+  "homepage": "https://doctorlai.github.io/yaml-json-converter"
 }
