--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
-# These are supported funding model platforms
-
 github: doctorlai
 patreon: doctorlai
-buy_me_a_coffee: y0btg5r
+buy_me_a_coffee: y0BtG5R
+thanks_dev: doctorlai
