--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "test": "vitest --watch=false",
     "deploy": "vite build && gh-pages -d dist",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
+    "format": "prettier --check 'src/**/*.{js,jsx}' 'tests/**/*.{js,jsx}'"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -20,21 +20,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
-    "@babel/eslint-parser": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.4.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.26.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
+    "prettier": "^3.5.3",
     "vite": "^6.3.4",
     "vitest": "^3.1.2"
   },
