--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest --watch=false",
-    "deploy": "vite build && gh-pages -d dist",
+    "deploy": "npm run add-version && npm run build && gh-pages -d dist",
+    "add-version": "echo \"VITE_COMMIT_HASH=$(git rev-parse --short HEAD)\" > .env",
     "format": "prettier --check 'src/**/*.{js,jsx}' 'tests/**/*.{js,jsx}'"
   },
   "dependencies": {
